# actividad-VI.

./: CMakeLists.txt  i2cNombre.c
