cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(i2cNombre_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(i2cNombre i2cNombre.c)
pico_add_extra_outputs(i2cNombre)
target_link_libraries(i2cNombre pico_cyw43_arch_none pico_stdlib  hardware_i2c)

